Fix input area hidden below viewport and close sidebar on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -222,7 +222,7 @@ header h1 {
 #chat-screen {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 60px);
     margin-top: 60px;
 }
 
